--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 <!-- component -->
 <!-- This is an example component -->
-<div class="container mx-auto mt-4 xl:mt-0">
+<div class="container mx-auto mt-4 xl:mt-0 relative">
 
 	<div id="default-carousel" class="relative" data-carousel="static">
         <!-- Carousel wrapper -->
@@ -98,6 +98,31 @@
             </span>
         </button>
     </div>
+<div class=" absolute -bottom-2 -translate-y-10 z-20  w-full">
+  <div class="flex mx-20 bg-slate-100 justify-around p-10 rounded">
+    <div class="flex flex-col items-center">
+      <img src="images/fruit/fruit1.png" alt="">
+      <p>Strawberry</p>
+    </div>
+    <div class="flex flex-col items-center">
+      <img src="images/fruit/fruit2.png" alt="">
+      <p> Orange</p>
+    </div>
+    <div class="flex flex-col items-center">
+      <img src="images/fruit/fruit3.png" alt="">
+<p>Mango</p>
+    </div>
+    <div class="flex flex-col items-center">
+      <img src="images/fruit/fruit4.png" alt="">
+      <p>Strawberry</p>
+    </div>
+    <div class="flex flex-col items-center">
+      <img src="images/fruit/fruit5.png" alt="">
+<p>Mango</p>
+    </div>
+  </div>
 </div>
+  </div>
+
   </body>
 </html>
