--- a/index.html
+++ b/index.html
@@ -98,7 +98,17 @@
             </span>
         </button>
     </div>
-<div class=" absolute -bottom-2 -translate-y-10 z-20  w-full">
+    <div class="w-full flex justify-center">
+      <div class="absolute top-20 z-20 text-center w-2/4">
+        <h1 class="text-5xl font-extrabold text-slate-300">
+          Exotic tastes at your
+  doorstep
+        </h1>
+        <p class="text-xl font-semibold text-rose-400 my-10">We supply highly quality organic </p>
+        <button class="bg-pink-600 font-bold px-4 py-3 text-stone-300 rounded">Shop Now</button>
+      </div>
+    </div>
+<div class="absolute bottom-0 -translate-y-6 hidden md:block z-20  w-full">
   <div class="flex mx-20 bg-slate-100 justify-around p-10 rounded">
     <div class="flex flex-col items-center">
       <img src="images/fruit/fruit1.png" alt="">
@@ -124,5 +134,32 @@
 </div>
   </div>
 
+  <div class="mt-12 container mx-auto">
+<div class="flex justify-between">
+  <div class="w-1/2">
+<h2 class="font-bold text-2xl">Deal of the day</h2>
+<p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical
+  Latin literature from 45 BC, making it over 2000 years old</p>
+  </div>
+  <div class="flex gap-5">
+    <div>
+      <p class="flex justify-start"><span class="text-4xl font-bold mr-3">29</span><span class="text-lg">:</span></p>
+      <span>Days</span>
+    </div>
+    <div>
+      <p class="flex justify-start"><span class="text-4xl font-bold mr-3">15</span><span class="text-lg">:</span></p>
+      <span>Hours</span>
+    </div>
+    <div>
+      <p class="flex justify-start"><span class="text-4xl font-bold mr-3">25</span><span class="text-lg">:</span></p>
+      <span>Minutes</span>
+    </div>
+    <div>
+      <p class="flex justify-start"><span class="text-4xl font-bold mr-3">08</span><span class="text-lg">:</span></p>
+      <span>Seconds</span>
+    </div>
+  </div>
+</div>
+  </div>
   </body>
 </html>
